[gd_scene load_steps=5 format=3 uid="uid://c6k2jpfxwbkvq"]

[ext_resource type="Script" path="res://ui/phone/equip_panel/equip_panel.gd" id="1_go4tm"]
[ext_resource type="StyleBox" uid="uid://cttam2d5l67d1" path="res://ui/phone/equip_panel/equip_slot_panel.tres" id="2_0j05u"]
[ext_resource type="PackedScene" uid="uid://n7oxl4i8smas" path="res://ui/phone/equip_panel/pack_viewer.tscn" id="2_nj6ve"]
[ext_resource type="PackedScene" uid="uid://dfy4agorh33pb" path="res://ui/widgets/equip_hint.tscn" id="3_oqxpi"]

[node name="EquipPanel" type="Control"]
custom_minimum_size = Vector2(700, 524)
layout_mode = 3
anchors_preset = 0
offset_right = 360.0
offset_bottom = 120.0
script = ExtResource("1_go4tm")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 700.0
offset_bottom = 414.0
theme_override_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0j05u")

[node name="Slot1" parent="HBoxContainer/HBoxContainer/MarginContainer/PanelContainer" instance=ExtResource("2_nj6ve")]
unique_name_in_owner = true
layout_mode = 2

[node name="EquipHint1" parent="HBoxContainer/HBoxContainer" instance=ExtResource("3_oqxpi")]
unique_name_in_owner = true
layout_mode = 2
name_alligment = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0j05u")

[node name="Slot2" parent="HBoxContainer/HBoxContainer2/MarginContainer/PanelContainer" instance=ExtResource("2_nj6ve")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EquipHint2" parent="HBoxContainer/HBoxContainer2" instance=ExtResource("3_oqxpi")]
unique_name_in_owner = true
layout_mode = 2
name_alligment = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0j05u")

[node name="Slot3" parent="HBoxContainer/HBoxContainer3/MarginContainer/PanelContainer" instance=ExtResource("2_nj6ve")]
unique_name_in_owner = true
layout_mode = 2

[node name="EquipHint3" parent="HBoxContainer/HBoxContainer3" instance=ExtResource("3_oqxpi")]
unique_name_in_owner = true
layout_mode = 2
name_alligment = 0
